--- a/index.html
+++ b/index.html
@@ -1,41 +1,150 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Card Scanner Web</title>
-  <link rel="manifest" href="/manifest.json">
-  <meta name="theme-color" content="#111827" />
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1" />
+  <meta name="theme-color" content="#0a84ff" />
+  <title>Scanner Biglietti da Visita</title>
+
   <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin: 0; padding: 16px; background:#0f172a; color:#e5e7eb; }
-    .card { background:#111827; border:1px solid #1f2937; border-radius:16px; padding:16px; max-width:720px; margin:0 auto; box-shadow: 0 10px 30px rgba(0,0,0,.25); }
-    button { padding:12px 16px; border-radius:12px; border:none; background:#22c55e; color:#0b111f; font-weight:600; cursor:pointer; }
-    button:disabled { opacity:.6; cursor:not-allowed; }
-    input[type=file] { width: 100%; padding: 10px; background:#0b1220; border:1px solid #1f2937; border-radius:12px; color:#e5e7eb; }
-    img { width: 100%; max-height: 300px; object-fit: contain; border-radius: 12px; border:1px solid #1f2937; background:#0b1220; }
-    .row { display:flex; gap:10px; align-items:center; justify-content:space-between; }
-    .kv { background:#0b1220; border:1px solid #1f2937; border-radius:12px; padding:8px 12px; }
-    .muted { color:#94a3b8; font-size:.9rem; }
+    :root{
+      --bg: #0b0c0f;
+      --card: #111318;
+      --text: #eef2f7;
+      --muted: #aab3bf;
+      --primary: #0a84ff;
+      --primary-pressed: #066ad1;
+      --border: #1f2430;
+      --ok: #1fb980;
+      --err: #ff5a5f;
+    }
+    @media (prefers-color-scheme: light){
+      :root{
+        --bg: #f7f8fb;
+        --card: #ffffff;
+        --text: #0f172a;
+        --muted: #475569;
+        --primary: #0a84ff;
+        --primary-pressed: #066ad1;
+        --border: #e5e7eb;
+      }
+    }
+
+    * { box-sizing: border-box; }
+    html, body { height: 100%; }
+    body {
+      margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      background: var(--bg); color: var(--text);
+      display: flex; min-height: 100vh; flex-direction: column;
+    }
+
+    .container {
+      width: 100%; max-width: 820px; margin: 0 auto; padding: 16px;
+      padding-bottom: 100px; /* spazio per il pulsante fisso */
+    }
+
+    h1 { font-size: 1.25rem; margin: 6px 0 16px; font-weight: 700; }
+
+    .card {
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: 14px;
+      padding: 14px;
+      box-shadow: 0 4px 20px rgba(0,0,0,.12);
+    }
+
+    .btn-row {
+      display: grid; grid-template-columns: 1fr 1fr; gap: 10px;
+      margin: 8px 0 6px;
+    }
+    .btn {
+      display: inline-flex; align-items: center; justify-content: center;
+      gap: 8px; width: 100%;
+      padding: 14px 16px;
+      font-size: 18px; font-weight: 700; letter-spacing: .2px;
+      border-radius: 12px; border: 1px solid var(--border);
+      background: #1a1f2a; color: var(--text);
+      transition: transform .06s ease, background .2s ease, border-color .2s ease;
+      -webkit-tap-highlight-color: transparent;
+    }
+    .btn:active { transform: scale(0.98); }
+    .btn-outline { background: transparent; }
+    .btn-primary {
+      background: var(--primary); color: white; border: none;
+    }
+    .btn-primary:active { background: var(--primary-pressed); }
+
+    .hint { color: var(--muted); font-size: .92rem; margin: 6px 2px 0; }
+
+    #preview img {
+      width: 100%; height: auto; display: block;
+      border-radius: 12px; margin-top: 10px;
+      border: 1px solid var(--border);
+    }
+
+    #result {
+      margin-top: 12px; padding: 12px;
+      background: var(--card); border: 1px solid var(--border);
+      border-radius: 12px; line-height: 1.35;
+    }
+    #result div { margin: 6px 0; }
+
+    .status {
+      margin-top: 8px; min-height: 24px; font-weight: 600;
+    }
+    .ok { color: var(--ok); }
+    .err { color: var(--err); }
+
+    /* pulsante di invio fisso in basso (comodo su mobile) */
+    .fab {
+      position: fixed; left: 0; right: 0; bottom: 0;
+      padding: 14px 16px;
+      background: linear-gradient(180deg, transparent, var(--bg) 20%, var(--bg));
+      display: grid; place-items: center;
+    }
+    .fab .btn-primary {
+      width: min(720px, calc(100% - 24px));
+      border-radius: 14px; padding: 16px;
+      font-size: 18px;
+    }
+    .btn:disabled { opacity: .6; }
+
+    /* nasconde gli input file tecnici */
+    input[type="file"] { display: none; }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1>Card Scanner (Web)</h1>
-    <p class="muted">Scatta o carica una foto del biglietto da visita.</p>
+  <div class="container">
+    <h1>Scanner Biglietti da Visita</h1>
 
-    <input id="file" type="file" accept="image/*" capture="environment" />
-    <div id="preview"></div>
+    <div class="card">
+      <!-- input nascosti -->
+      <input id="fileCamera"  type="file" accept="image/*" capture="environment">
+      <input id="fileGallery" type="file" accept="image/*,.jpg,.jpeg,.png">
 
-    <div class="row" style="margin:12px 0;">
-      <button id="sendBtn" disabled>Estrai e salva su Google Sheets</button>
-      <span id="status" class="muted"></span>
+      <!-- azioni -->
+      <div class="btn-row">
+        <button id="btnCamera"  class="btn">📷 Scatta foto</button>
+        <button id="btnGallery" class="btn btn-outline">🖼️ Scegli dalla galleria</button>
+      </div>
+      <div class="hint">Suggerimento: la galleria è più stabile su Android quando vuoi scegliere una foto già esistente.</div>
+
+      <!-- anteprima -->
+      <div id="preview"></div>
+
+      <!-- esito -->
+      <div id="result" style="display:none;"></div>
+      <div id="status" class="status"></div>
     </div>
-
-    <div id="result" class="kv" style="display:none;"></div>
-
-    <p class="muted">Suggerimento: scatta in buona luce, allineato e senza riflessi.</p>
   </div>
 
-  <script src="/script.js"></script>
+  <!-- pulsante invio fisso in basso -->
+  <div class="fab">
+    <button id="sendBtn" class="btn btn-primary" disabled>Estrai e salva</button>
+  </div>
+
+  <!-- collega lo script con cache-busting -->
+  <script src="script.js?v=7"></script>
 </body>
 </html>
