--- a/index.html
+++ b/index.html
@@ -1,151 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1" />
-  <meta name="theme-color" content="#0a84ff" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Business Card Scanner</title>
-
   <style>
-    :root{
-      --bg: #0b0c0f;
-      --card: #111318;
-      --text: #eef2f7;
-      --muted: #aab3bf;
-      --primary: #0a84ff;
-      --primary-pressed: #066ad1;
-      --border: #1f2430;
-      --ok: #1fb980;
-      --err: #ff5a5f;
-    }
-    @media (prefers-color-scheme: light){
-      :root{
-        --bg: #f7f8fb;
-        --card: #ffffff;
-        --text: #0f172a;
-        --muted: #475569;
-        --primary: #0a84ff;
-        --primary-pressed: #066ad1;
-        --border: #e5e7eb;
-      }
-    }
-
-    * { box-sizing: border-box; }
-    html, body { height: 100%; }
     body {
-      margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      background: var(--bg); color: var(--text);
-      display: flex; min-height: 100vh; flex-direction: column;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 20px;
+      background: #f7f7f7;
     }
-
-    .container {
-      width: 100%; max-width: 820px; margin: 0 auto; padding: 16px;
-      padding-bottom: 100px; /* room for bottom button */
-    }
-
-    h1 { font-size: 1.25rem; margin: 6px 0 16px; font-weight: 700; text-align:center; }
-
-    .card {
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: 14px;
-      padding: 14px;
-      box-shadow: 0 4px 20px rgba(0,0,0,.12);
-    }
-
-    .btn-row {
-      display: grid; grid-template-columns: 1fr 1fr; gap: 10px;
-      margin: 8px 0 6px;
+    h1 {
+      margin-bottom: 20px;
     }
     .btn {
-      display: inline-flex; align-items: center; justify-content: center;
-      gap: 8px; width: 100%;
-      padding: 14px 16px;
-      font-size: 18px; font-weight: 700; letter-spacing: .2px;
-      border-radius: 12px; border: 1px solid var(--border);
-      background: #1a1f2a; color: var(--text);
-      transition: transform .06s ease, background .2s ease, border-color .2s ease;
-      -webkit-tap-highlight-color: transparent;
+      display: inline-block;
+      margin: 10px;
+      padding: 12px 20px;
+      border-radius: 8px;
       cursor: pointer;
+      font-size: 16px;
+      font-weight: bold;
+      border: none;
     }
-    .btn:active { transform: scale(0.98); }
-    .btn-outline { background: transparent; }
-    .btn-primary {
-      background: var(--primary); color: white; border: none;
+    #galleryLabel {
+      background-color: #007BFF;
+      color: white;
     }
-    .btn-primary:active { background: var(--primary-pressed); }
-
-    .hint { color: var(--muted); font-size: .92rem; margin: 6px 2px 0; text-align:left; }
-
+    #cameraLabel {
+      background-color: #000;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 160px;
+    }
     #preview img {
-      width: 100%; height: auto; display: block;
-      border-radius: 12px; margin-top: 10px;
-      border: 1px solid var(--border);
+      max-width: 300px;
+      margin-top: 15px;
+      border-radius: 6px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.3);
     }
-
     #result {
-      margin-top: 12px; padding: 12px;
-      background: var(--card); border: 1px solid var(--border);
-      border-radius: 12px; line-height: 1.35; text-align:left;
+      margin-top: 20px;
+      text-align: left;
+      display: none;
+      background: #fff;
+      padding: 15px;
+      border-radius: 6px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.2);
     }
-    #result div { margin: 6px 0; }
-
-    .status {
-      margin-top: 8px; min-height: 24px; font-weight: 600;
+    #status {
+      margin-top: 15px;
+      font-weight: bold;
     }
-    .ok { color: var(--ok); }
-    .err { color: var(--err); }
-
-    /* bottom fixed CTA */
-    .fab {
-      position: fixed; left: 0; right: 0; bottom: 0;
-      padding: 14px 16px;
-      background: linear-gradient(180deg, transparent, var(--bg) 20%, var(--bg));
-      display: grid; place-items: center;
-    }
-    .fab .btn-primary {
-      width: min(720px, calc(100% - 24px));
-      border-radius: 14px; padding: 16px;
-      font-size: 18px;
-    }
-    .btn:disabled { opacity: .6; cursor: not-allowed; }
-
-    /* hide technical file inputs */
-    input[type="file"] { display: none; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Business Card Scanner</h1>
+  <h1>Business Card Scanner</h1>
 
-    <div class="card">
-      <!-- hidden inputs -->
-      <input id="fileCamera"  type="file" accept="image/*" capture="environment">
-      <input id="fileGallery" type="file" accept="image/*,.jpg,.jpeg,.png">
+  <!-- Button for selecting from gallery -->
+  <label id="galleryLabel" class="btn" for="file">Choose from Gallery</label>
+  <input type="file" id="file" accept="image/*" style="display:none">
 
-      <!-- actions -->
-      <div class="btn-row">
-        <button id="btnCamera"  class="btn">📷 Photo</button>
-        <button id="btnGallery" class="btn btn-outline">🖼️ Gallery</button>
-      </div>
-      <div class="hint">Tip: use Gallery if you already have a photo saved on your phone.</div>
+  <!-- Button for camera capture -->
+  <label id="cameraLabel" class="btn" for="cameraInput">
+    📷 <span style="margin-left: 8px;">Photo</span>
+  </label>
+  <input type="file" id="cameraInput" accept="image/*" capture="environment" style="display:none">
 
-      <!-- preview -->
-      <div id="preview"></div>
+  <br>
+  <button id="sendBtn" class="btn" style="background:#28a745;color:white;">Extract & Save</button>
 
-      <!-- result -->
-      <div id="result" style="display:none;"></div>
-      <div id="status" class="status"></div>
-    </div>
-  </div>
+  <div id="status"></div>
+  <div id="preview"></div>
+  <div id="result"></div>
 
-  <!-- bottom CTA -->
-  <div class="fab">
-    <button id="sendBtn" class="btn btn-primary" disabled>Extract &amp; Save</button>
-  </div>
-
-  <!-- cache-busting to avoid old JS -->
-  <script src="script.js?v=10"></script>
+  <script src="script.js"></script>
 </body>
 </html>
