--- a/index.html
+++ b/index.html
@@ -91,6 +91,6 @@
   <div id="preview"></div>
   <div id="result"></div>
 
-  <script src="script.js"></script>
+  <script src="script.js?v=13"></script>
 </body>
 </html>
